--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
     .hero {
       background: linear-gradient(90deg, rgba(0, 102, 51, 0.9), rgba(0, 102, 51, 0.8)),
-                  url('https://www.usu.ac.id/images/hero/banner-gedung.jpg') no-repeat center center;
+        url('https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEheA0Bc7baPuLZdw6xxDQ1pGZ3T5iEkv5ehPZI92uC9sDirUq3r1FK5Mf5M3eVqA-ZpLwl78QQnNf_MZcYs6Uj1_IphAqajY9FH_h0G4JYyFxlEQu1j5FwrzjnQKV3ySsP8wKLfetO2snGP/s1600/2b87d0589691929bcf23d67ecf613b13.jpg') no-repeat center center;
       background-size: cover;
       color: white;
       padding: 140px 0;
@@ -177,21 +177,21 @@ section img:hover {
         </li>      
         <ul class="navbar-nav ms-auto">
         <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="LAYANAN/pilihanlayanan.html" data-bs-toggle="dropdown">LAYANAN</a>
+        <a class="nav-link dropdown-toggle" href="pilihanlayanan.html" data-bs-toggle="dropdown">LAYANAN</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="LAYANAN/peng.kewirausahaan.html">PENGEMBANGAN KEWIRAUSAHAAN</a></li>
-            <li><a class="dropdown-item" href="LAYANAN/peng.softskills.html">PENGEMBANGAN SOFT SKILLS</a></li>
-            <li><a class="dropdown-item" href="LAYANAN/pelat.pemasarandigital.html">PELATIHAN PEMASARAN DIGITAL</a></li>
-            <li><a class="dropdown-item" href="LAYANAN/pelat.agribisnis.html">PELATIHAN AGRIBISNIS</a></li>
+            <li><a class="dropdown-item" href="peng.kewirausahaan.html">PENGEMBANGAN KEWIRAUSAHAAN</a></li>
+            <li><a class="dropdown-item" href="peng.softskills.html">PENGEMBANGAN SOFT SKILLS</a></li>
+            <li><a class="dropdown-item" href="pelat.pemasarandigital.html">PELATIHAN PEMASARAN DIGITAL</a></li>
+            <li><a class="dropdown-item" href="pelat.agribisnis.html">PELATIHAN AGRIBISNIS</a></li>
           </ul>
         </li>
         <ul class="navbar-nav ms-auto">
         <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">CALON MAHASISWA</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="CALONMAHASISWA/pendaftaran.html">PENDAFTARAN</a></li>
-            <li><a class="dropdown-item" href="CALONMAHASISWA/pendaftaranbeasiswa.html">PENDAFTARAN BEASISWA</a></li>
-            <li><a class="dropdown-item" href="CALONMAHASISWA/biayakuliah.html">BIAYA KULIAH</a></li>
+            <li><a class="dropdown-item" href="pendaftaran.html">PENDAFTARAN</a></li>
+            <li><a class="dropdown-item" href="pendaftaranbeasiswa.html">PENDAFTARAN BEASISWA</a></li>
+            <li><a class="dropdown-item" href="biayakuliah.html">BIAYA KULIAH</a></li>
           </ul>
         </li>
       <div class="d-flex align-items-center gap-2">
