--- a/ap.html
+++ b/ap.html
@@ -104,8 +104,6 @@
     🔔 Penerimaan Mahasiswa Baru Tahun Ajaran 2025/2026 Telah Dibuka! &nbsp;&nbsp; 📣 Cek Jadwal Ujian dan Kalender Akademik Terbaru di Website Resmi &nbsp;&nbsp; 🎓 Wisuda Periode Agustus 2025 Segera Dilaksanakan
   </div>
 </div>
-
-<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-success shadow-sm fixed-top">
     <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="#">
@@ -159,21 +157,21 @@
         </li>      
         <ul class="navbar-nav ms-auto">
         <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="LAYANAN/pilihanlayanan.html" data-bs-toggle="dropdown">LAYANAN</a>
+        <a class="nav-link dropdown-toggle" href="pilihanlayanan.html" data-bs-toggle="dropdown">LAYANAN</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="LAYANAN/peng.kewirausahaan.html">PENGEMBANGAN KEWIRAUSAHAAN</a></li>
-            <li><a class="dropdown-item" href="LAYANAN/peng.softskills.html">PENGEMBANGAN SOFT SKILLS</a></li>
-            <li><a class="dropdown-item" href="LAYANAN/pelat.pemasarandigital.html">PELATIHAN PEMASARAN DIGITAL</a></li>
-            <li><a class="dropdown-item" href="LAYANAN/pelat.agribisnis.html">PELATIHAN AGRIBISNIS</a></li>
+            <li><a class="dropdown-item" href="peng.kewirausahaan.html">PENGEMBANGAN KEWIRAUSAHAAN</a></li>
+            <li><a class="dropdown-item" href="peng.softskills.html">PENGEMBANGAN SOFT SKILLS</a></li>
+            <li><a class="dropdown-item" href="pelat.pemasarandigital.html">PELATIHAN PEMASARAN DIGITAL</a></li>
+            <li><a class="dropdown-item" href="pelat.agribisnis.html">PELATIHAN AGRIBISNIS</a></li>
           </ul>
         </li>
         <ul class="navbar-nav ms-auto">
         <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">CALON MAHASISWA</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="CALONMAHASISWA/pendaftaran.html">PENDAFTARAN</a></li>
-            <li><a class="dropdown-item" href="CALONMAHASISWA/pendaftaranbeasiswa.html">PENDAFTARAN BEASISWA</a></li>
-            <li><a class="dropdown-item" href="CALONMAHASISWA/biayakuliah.html">BIAYA KULIAH</a></li>
+            <li><a class="dropdown-item" href="pendaftaran.html">PENDAFTARAN</a></li>
+            <li><a class="dropdown-item" href="pendaftaranbeasiswa.html">PENDAFTARAN BEASISWA</a></li>
+            <li><a class="dropdown-item" href="biayakuliah.html">BIAYA KULIAH</a></li>
           </ul>
         </li>
       <div class="d-flex align-items-center gap-2">
