--- a/laboratoriumkomputer.html
+++ b/laboratoriumkomputer.html
@@ -6,56 +6,123 @@
     <title>Politeknik Wilmar Bisnis Indonesia</title>
 </head>
 <style>
-    .section-header {
-      text-align: center;
-      margin-bottom: 10px;
+   body {
+      font-family: 'Segoe UI', sans-serif;
     }
+    .navbar-brand img {
+      height: 40px;
+    }
+    .hero {
+      background: linear-gradient(90deg, rgba(0, 102, 51, 0.9), rgba(0, 102, 51, 0.8)),
+        url('https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEheA0Bc7baPuLZdw6xxDQ1pGZ3T5iEkv5ehPZI92uC9sDirUq3r1FK5Mf5M3eVqA-ZpLwl78QQnNf_MZcYs6Uj1_IphAqajY9FH_h0G4JYyFxlEQu1j5FwrzjnQKV3ySsP8wKLfetO2snGP/s1600/2b87d0589691929bcf23d67ecf613b13.jpg') no-repeat center center;
+      background-size: cover;
+      color: white;
+      padding: 140px 0;
+    }
+    .hero h1 {
+      font-weight: 700;
+      font-size: 3rem;
+    }
+    .hero p {
+      font-size: 1.25rem;
+    }
+    .section-title {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 10px;
+  color: #004225;
+  position: relative;
+}
 
-    .section-header h6 {
-      position: relative;
-      display: inline-block;
-      font-weight: bold;
-      color: #b30000;
-      margin-bottom: 5px;
-      text-transform: uppercase;
-      font-size: 14px;
-    }
+.section-title::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 4px;
+  background-color: #ffd100;
+  margin: 10px auto 0;
+}
 
-    .section-header h6::before,
-    .section-header h6::after {
-      content: "";
-      position: absolute;
-      top: 50%;
-      width: 40px;
-      height: 2px;
-      background-color: #b30000;
-    }
+.card-title {
+  font-weight: 600;
+  font-size: 1.1rem;
+}
 
-    .section-header h6::before {
-      left: -50px;
-    }
+.card-text {
+  font-size: 0.95rem;
+  color: #333;
+}
+.sdgs-carousel-wrapper {
+  position: relative;
+  width: 100%;
+  height: 110px;
+}
 
-    .section-header h6::after {
-      right: -50px;
-    }
+.sdgs-carousel {
+  display: flex;
+  gap: 16px;
+  animation: scrollLeft 25s linear infinite;
+}
 
-    .section-header h2 {
-      color: #800000;
-      font-weight: bold;
-      margin-top: 5px;
-    }
+.sdgs-icon {
+  height: 100px;
+  width: auto;
+  flex-shrink: 0;
+  border-radius: 12px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
 
-    .section-img {
-      width: 100%;
-      border-radius: 6px;
-    }
+@keyframes scrollLeft {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+.video-testimoni-section h4 {
+  font-weight: 600;
+}
 
-    .section-desc {
-      margin-top: 15px;
-      text-align: justify;
-    }
+.carousel-item .card {
+  border-left: 5px solid #ffd100;
+  background-color: #fff;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color: #004225;
+  border-radius: 50%;
+}
+.footer-section {
+  background-color: #004225;
+  color: #fff;
+}
+
+.footer-link {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-link:hover {
+  color: #ffd100;
+  text-decoration: underline;
+}
+.lang-switch:hover {
+  color: #0d6efd;
+}
+section img {
+  transition: transform 0.3s ease;
+}
+
+section img:hover {
+  transform: scale(1.1);
+}
+
 </style>
+</head>
 <body>
+
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-success shadow-sm fixed-top">
     <div class="container">
@@ -110,21 +177,21 @@
         </li>      
         <ul class="navbar-nav ms-auto">
         <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="LAYANAN/pilihanlayanan.html" data-bs-toggle="dropdown">LAYANAN</a>
+        <a class="nav-link dropdown-toggle" href="pilihanlayanan.html" data-bs-toggle="dropdown">LAYANAN</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="LAYANAN/peng.kewirausahaan.html">PENGEMBANGAN KEWIRAUSAHAAN</a></li>
-            <li><a class="dropdown-item" href="LAYANAN/peng.softskills.html">PENGEMBANGAN SOFT SKILLS</a></li>
-            <li><a class="dropdown-item" href="LAYANAN/pelat.pemasarandigital.html">PELATIHAN PEMASARAN DIGITAL</a></li>
-            <li><a class="dropdown-item" href="LAYANAN/pelat.agribisnis.html">PELATIHAN AGRIBISNIS</a></li>
+            <li><a class="dropdown-item" href="peng.kewirausahaan.html">PENGEMBANGAN KEWIRAUSAHAAN</a></li>
+            <li><a class="dropdown-item" href="peng.softskills.html">PENGEMBANGAN SOFT SKILLS</a></li>
+            <li><a class="dropdown-item" href="pelat.pemasarandigital.html">PELATIHAN PEMASARAN DIGITAL</a></li>
+            <li><a class="dropdown-item" href="pelat.agribisnis.html">PELATIHAN AGRIBISNIS</a></li>
           </ul>
         </li>
         <ul class="navbar-nav ms-auto">
         <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">CALON MAHASISWA</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="CALONMAHASISWA/pendaftaran.html">PENDAFTARAN</a></li>
-            <li><a class="dropdown-item" href="CALONMAHASISWA/pendaftaranbeasiswa.html">PENDAFTARAN BEASISWA</a></li>
-            <li><a class="dropdown-item" href="CALONMAHASISWA/biayakuliah.html">BIAYA KULIAH</a></li>
+            <li><a class="dropdown-item" href="pendaftaran.html">PENDAFTARAN</a></li>
+            <li><a class="dropdown-item" href="pendaftaranbeasiswa.html">PENDAFTARAN BEASISWA</a></li>
+            <li><a class="dropdown-item" href="biayakuliah.html">BIAYA KULIAH</a></li>
           </ul>
         </li>
       <div class="d-flex align-items-center gap-2">
