--- a/pilihanfasilitas.html
+++ b/pilihanfasilitas.html
@@ -133,7 +133,7 @@ section img:hover {
     }
 
     .facility-img {
-      width: 100%;
+      width: 100px;
       height: 180px;
       object-fit: cover;
     }
