--- a/nilainilaiinti.html
+++ b/nilainilaiinti.html
@@ -215,13 +215,12 @@ section img:hover {
       
       <!-- Kolom Gambar -->
       <div class="col-md-5 mb-4 mb-md-0">
-        <img src="https://wbi.ac.id/uploads/images/ZV7Dnmk7S5132vy7tT6KIBLtecvQpWZGnK6546KX.jpeg" class="img-fluid" alt="Lulusan" style="max-height: 500px;">
+        <img src="https://wbi.ac.id/uploads/images/dATWM41E7s6SHhRpZpKMMygYCxAftkYnvWvc5J95.jpg" class="img-fluid" alt="Lulusan" style="max-height: 500px;">
       </div>
 
       <!-- Kolom Teks -->
       <div class="col-md-7">
         <div class="mb-3 d-flex align-items-center">
-          <img src="https://wbi.ac.id/uploads/images/dATWM41E7s6SHhRpZpKMMygYCxAftkYnvWvc5J95.jpg" alt="Ikon" style="height: 40px;" class="me-2">
           <h5 class="bg-success text-white px-3 py-1 m-0">Nilai-Nilai Inti</h5>
         </div>
         <h4 class="fw-bold text-success">
