--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ section img:hover {
 <div class="card-body">
   <h5 class="card-title">Dosen Program Studi Agribisnis Hortikultura Politeknik WBI Memperoleh Prestasi Gemilang dengan IPK 4.00 Program Doktor</h5>
   <p class="card-text">Prestasi gemilang di torehkan Dosen Program Studi Agribisnis Hortikultura, Dr. Dany Juhandi, S.P, M.Sc. Berhasil menjadi salah satu wisudawan terbaik ...</p>
-  <a href="BERITA/berita1.html" class="btn btn-sm btn-outline-success">Baca Selengkapnya</a>
+  <a href="berita1.html" class="btn btn-sm btn-outline-success">Baca Selengkapnya</a>
 </div>
 </div>
 </div>
@@ -320,7 +320,7 @@ section img:hover {
 <div class="card-body">
   <h5 class="card-title">Selamat ! Politeknik WBI Berhasil Meraih Hibah Penelitian Melalui Dua Judul Usulan Program Penelitian dan Pengabdian Masyarakat</h5>
   <p class="card-text">Dua judul usulan program penelitian dan pengabdian masyarakat Batch III Tahun Anggaran 2024 dari Politeknik WBI berhasil meraih...</p>
-  <a href="BERITA/berita2.html" class="btn btn-sm btn-outline-success">Baca Selengkapnya</a>
+  <a href="berita2.html" class="btn btn-sm btn-outline-success">Baca Selengkapnya</a>
 </div>
 </div>
 </div>
@@ -331,7 +331,7 @@ section img:hover {
 <div class="card-body">
   <h5 class="card-title">Politeknik WBI Raih Juara Umum SPMI 2024</h5>
   <p class="card-text">Politeknik WBI raih lima Penghargaan Kategori bentuk Perguruan Tinggi Politeknik pada Anugerah Pelaporan Sistem Penjaminan Mutu Internal (SPMI) bagi...</p>
-  <a href="BERITA/berita3.html" class="btn btn-sm btn-outline-success">Baca Selengkapnya</a>
+  <a href="berita3.html" class="btn btn-sm btn-outline-success">Baca Selengkapnya</a>
 </div>
 </div>
 </div>
