--- a/ap.html
+++ b/ap.html
@@ -211,7 +211,7 @@
     </div>
   </div>
 
-<h2>Greeting From Head</h2>
+<div class="col-md-2 py-3">Greeting From Head</div>
 
   <div class="container">
     <div class="text-section">
