--- a/septiansimatupang.html
+++ b/septiansimatupang.html
@@ -119,6 +119,44 @@ section img {
 section img:hover {
   transform: scale(1.1);
 }
+   .foto-profil {
+      width: 100%;
+      border-radius: 10px;
+      background-color: #f8f9fa;
+      padding: 15px;
+    }
+
+    .nama-dosen {
+      font-weight: bold;
+      font-size: 18px;
+    }
+
+    .judul-section {
+      font-weight: bold;
+      color: #007f5f;
+      font-size: 20px;
+      margin-top: 20px;
+      margin-bottom: 10px;
+      border-left: 5px solid #007f5f;
+      padding-left: 10px;
+    }
+
+    .publikasi-judul {
+      font-weight: bold;
+      font-size: 15px;
+    }
+
+    .publikasi-penulis {
+      font-style: italic;
+      color: #555;
+      font-size: 14px;
+      margin-bottom: 10px;
+    }
+
+    .nip, .nidn {
+      font-size: 14px;
+      color: #555;
+    }
 
 </style>
 </head>
