--- a/muslimramli.html
+++ b/muslimramli.html
@@ -247,7 +247,7 @@ section img:hover {
 </nav>
 
 <div class="container py-4">
-  <div class="row">
+  <div class="row py-4">
     <!-- Foto dan identitas -->
     <div class="col-md-3">
       <div class="foto-profil text-center">
