--- a/mpi.html
+++ b/mpi.html
@@ -352,7 +352,7 @@
 </div>
 <div class="carousel-item">
 <div class="card p-4 shadow-sm">
-    <p class="mb-2">"Dosen dan fasilitas WBI luar biasa. Saya bangga jadi bagian dari USU."</p>
+    <p class="mb-2">"Dosen dan fasilitas WBI luar biasa. Saya bangga jadi bagian dari WBI."</p>
     <small class="text-muted">– Lestari, Alumni Manajemen Pemasaran Internasional</small>
 </div>
 </div>
