--- a/bilsonpandiangan.html
+++ b/bilsonpandiangan.html
@@ -247,7 +247,7 @@ section img:hover {
 <div class="container py-4">
   <div class="row">
     <!-- Foto dan identitas -->
-    <div class="col-md-3">
+    <div class="col-md-3 py-3">
       <div class="foto-profil text-center">
         <img src="https://wbi.ac.id/uploads/images/qt9KMT7vRNANkzEkrh58HoE5HJghOY2LgNJc1WIZ.jpeg" alt="Foto Prof Edy" class="img-fluid mb-3">
         <div class="nama-dosen">Bilson Pandiangan, S.Si., M.M.</div>
