--- a/muslimramli.html
+++ b/muslimramli.html
@@ -249,7 +249,7 @@ section img:hover {
 <div class="container py-4">
   <div class="row">
     <!-- Foto dan identitas -->
-    <div class="col-md-3">
+    <div class="col-md-3 py-3">
       <div class="foto-profil text-center">
         <img src="https://wbi.ac.id/uploads/images/dkE4Fxa39rrjlfkTHtXqPkBU2vPDP7AxcvoS1oyg.jpg" alt="Foto Prof Edy" class="img-fluid mb-3">
         <div class="nama-dosen">Muslim Ramli, S.Kom., M.Kom</div>
