--- a/ajiprasetya.html
+++ b/ajiprasetya.html
@@ -248,7 +248,7 @@ section img:hover {
 <div class="container py-4">
   <div class="row">
     <!-- Foto dan identitas -->
-    <div class="col-md-3">
+    <div class="col-md-3 py-3">
       <div class="foto-profil text-center">
         <img src="https://wbi.ac.id/uploads/images/SfjExDO80CXOaBilubXPrW7mA2N4k7G5e3PBMoyp.jpeg" alt="Foto Prof Edy" class="img-fluid mb-3">
         <div class="nama-dosen">Aji Prasetya Hadi, S.par., M.Par.</div>
