--- a/ameliraharis.html
+++ b/ameliraharis.html
@@ -248,7 +248,7 @@ section img:hover {
 <div class="container py-4">
   <div class="row">
     <!-- Foto dan identitas -->
-    <div class="col-md-3">
+    <div class="col-md-3 py-3">
       <div class="foto-profil text-center">
         <img src="https://wbi.ac.id/uploads/images/qdRmmTiiAYrNRTkjmbr47jGYq7PMMeCwzVjXxDOR.jpeg" alt="Foto Prof Edy" class="img-fluid mb-3">
         <div class="nama-dosen">Amelira Haris Nasution, S.P., M.Si.</div>
