--- a/astonsitumorang.html
+++ b/astonsitumorang.html
@@ -247,7 +247,7 @@ section img:hover {
 <div class="container py-4">
   <div class="row">
     <!-- Foto dan identitas -->
-    <div class="col-md-3">
+    <div class="col-md-3 py-3">
       <div class="foto-profil text-center">
         <img src="https://wbi.ac.id/uploads/images/PwIZlLDzy7WVTilwK2xeuLj3ZTNqPNvSP5vwM76U.jpeg" alt="Foto Prof Edy" class="img-fluid mb-3">
         <div class="nama-dosen">Aston L. Situmorang, S.E., M.Si.</div>
