--- a/nukeunovia.html
+++ b/nukeunovia.html
@@ -290,7 +290,7 @@ section img:hover {
   <div class="container">
     <div class="row g-4">
       <!-- Logo & Alamat -->
-      <div class="col-md-4">
+      <div class="col-md-4 py-3">
         <img src="https://student.wbi.ac.id/assets/image_web/logo-white-3.png" alt="Logo USU" width="70" class="mb-3">
         <h5 class="fw-bold">Politeknik Wilmar Bisnis Indonesia</h5>
         <p class="small">
