--- a/index.html
+++ b/index.html
@@ -426,13 +426,13 @@ section a.text-primary:hover {
             <img src="https://lppm.wbi.ac.id//sliders/1750514261_kolaborasi-penelitian-politeknik-wilmar-bisnis-indonesia-dan-pt-psn-kembangkan-pupuk-hayati-dan-organik-berbasis-limbah-pertanian.jpg" alt="Mahasiswa 1" class="img-fluid rounded shadow-sm">
           </div>
           <div class="col-6">
-            <img src="img2.jpg" alt="Ilustrasi 2" class="img-fluid rounded shadow-sm">
+            <img src="img2.jpg" alt="Pengabdian" class="img-fluid rounded shadow-sm">
           </div>
           <div class="col-6">
-            <img src="img3.jpg" alt="Logo Kampus Merdeka" class="img-fluid rounded shadow-sm">
+            <img src="img3.jpg" alt="Pengabdian" class="img-fluid rounded shadow-sm">
           </div>
           <div class="col-6">
-            <img src="img4.jpg" alt="Mahasiswa 2" class="img-fluid rounded shadow-sm">
+            <img src="img4.jpg" alt="Pendabdian" class="img-fluid rounded shadow-sm">
           </div>
         </div>
       </div>
