--- a/logowbi.html
+++ b/logowbi.html
@@ -72,7 +72,13 @@
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
-
+p {
+  font-size: 0.95rem;
+  color: #444;
+}
+.bg-light {
+  background-color: #f8f9fa !important;
+}
 @keyframes scrollLeft {
   0% {
     transform: translateX(0%);
