--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ section a.text-primary:hover {
           <span class="btn btn-outline-warning rounded-pill px-3">Wirausaha</span>
         </div>
 
-        <a href="#" class="text-primary fw-semibold text-decoration-none">
+        <a href="logowbi.html" class="text-primary fw-semibold text-decoration-none">
           Selengkapnya Tentang WBI →
         </a>
       </div>
