--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -206,51 +206,6 @@ section img:hover {
   </div>
 </nav>
 
- <div class="container py-5">
-<div class="row">
-<div class="col-12">
-    <h4 class="text-center mb-4">TEKNOLOGI REKAYASA PERANGKAT LUNAK</h4>
-<table class="table table-bordered table-teal">
-<thead class="bg-teal">
-    <tr>
-    <th></th>
-        <th>IN-STATE (Per Semester)</th>
-        <th>OUT-STATE (Per Semester)</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>Tuition Per Credit</td>
-        <td>$645.00</td>
-        <td>$975.00</td>
-    </tr>
-    <tr>
-        <td><strong>Education & General Fees</strong> (Per Credits)</td>
-        <td>$845.00</td>
-        <td>$845.00</td>
-    </tr>
-    <tr>
-        <td>Facilities Fee (12–20 credits)</td>
-        <td>$845.00</td>
-        <td>$245.00</td>
-    </tr>
-    <tr class="total-row">
-        <td>Total</td>
-        <td>$8,335.00</td>
-        <td>$13,565.00</td>
-    </tr>
-    </tbody>
-    <tfoot class="footer-note">
-    <tr>
-        <td>Other Fees Per Semester</td>
-        <td colspan="2">Non-Matriculated Student Fee (if applicable): $65</td>
-        </tr>
-    </tfoot>
-    </table>
-</div>
-</div>
-</div>
-
 <div class="container">
 <div class="row py-2">
     <h4 class="section-heading" style="border-left: 5px solid teal;">ALUR PENDAFTARAN</h4>
@@ -266,7 +221,7 @@ section img:hover {
 <div class="row align-items-center custom-section">
  <!-- Gambar kiri -->
 <div class="col-md-6">
-    <img src="c:\Users\rinna\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\TempState\DF0E09D6F25A15A815563DF9827F48FA\WhatsApp Image 2025-07-14 at 10.07.00_e8e275fc.jpg" alt="Akuntansi Perpajakan" class="rounded-img" style="width: 500px; height: 500px;">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYzJ7p7C4Vfl5LxALPn9O4cLq1JjgIqqS4wA&s" alt="Promo Kuliah" class="rounded-img" style="width: 500px; height: 500px;">
 </div>
 <!-- Teks kanan -->
 <div class="col-md-6 text-md-start text-center">
@@ -294,14 +249,14 @@ section img:hover {
 <div class="row align-items-center custom-section">
 <!-- Teks kiri -->
 <div class="col-md-6 order-md-1 text-md-end text-center">
-    <div class="study-text">Menjadi Politeknik yang unggul dalam pendidikan vokasional dan entrepreneurship untuk pembangunan bangsa. </div>
+    <div class="study-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </div>
 </div>
 <!-- Gambar kanan -->
 <div class="col-md-6 order-md-2">
-    <img src="c:\Users\rinna\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\TempState\DF0E09D6F25A15A815563DF9827F48FA\WhatsApp Image 2025-07-14 at 10.07.00_f12c1e39.jpg" alt="TRPL" class="rounded-img" style="width: 500px; height: 500px;">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZrSuK6e2BEkI0IGT9b1ZvvZUf_hNp9w7r7w&s" alt="TRPL" class="rounded-img" style="width: 500px; height: 500px;">
 </div>
 </div>
-
+</div>
 
   <!-- Footer -->
 <footer class="footer-section bg-dark text-white pt-5 pb-3">
