--- a/biayakuliah.html
+++ b/biayakuliah.html
@@ -206,8 +206,8 @@ section img:hover {
   </div>
 </nav>
 
- <div class="container py-5">
-<div class="row">
+ <div class="container">
+<div class="row p-3">
 <div class="col-12">
     <h4 class="text-center mb-4">TEKNOLOGI REKAYASA PERANGKAT LUNAK</h4>
 <table class="table table-bordered table-teal">
