--- a/logowbi.html
+++ b/logowbi.html
@@ -213,11 +213,10 @@ section img:hover {
 </nav>
 
 <div class="container my-5">
-  <div class="row align-items-center mb-4">
+  <div class="row py-3 align-items-center mb-4">
     <div class="col-md-10">
       <p class="fs-5 text-muted">
-       Politeknik WBI (Wilmar Bisnis Indonesia) memiliki identitas termasuk status, kedudukan, hari jadi, lambang, bendera, himne, mars, dan busana akademik yang diatur di dalam Peraturan Pemerintah No. 16 Tahun 2014 tentang Statuta USU.
-      </p>
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."      </p>
     </div>
     <div class="col-md-2 text-end">
       <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj9x1JM5W0z-6VEKw5YaDEcWeKh5qQC5icmrWuZkB1TeLUdhg-p4lAn_on56h-03f-h5YC25I3mdl-TxfxopgcmJlC1Tp4uxXHJdnJuIbgHXQ9X_pdVwQjtDdXEGhdzds8kLK_KCYJC6vTh/s1600/logo.jpg" alt="Logo USU" class="img-fluid" style="max-height: 100px;">
