--- a/23november2024.html
+++ b/23november2024.html
@@ -241,20 +241,21 @@ section img:hover {
   </div>
 </nav>
 
- <div class="me-3" style="border-left: 8px solid teal; height: 60px;">WISUDA : 23 NOVEMBER 2024</div>
+<div class="row mb-4">
+<div class="col-12 text-center">
+  <h2 class="section-title">WISUDA : 23 NOVEMBER 2024</h2>
+</div>
+ </div>
  <div class="video-section">
-    <iframe width="560" height="315" src="https://youtu.be/CbB93XSYTF4" title="Profile Video Teknik Telekomunikasi Universitas Telkom" frameborder="0" allowfullscreen></iframe>
-  </div>
-
+  <iframe width="853" height="480" src="https://www.youtube.com/embed/CbB93XSYTF4" title="SIDANG SENAT TERBUKA POLITEKNIK WBI 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
   <div class="container mt-5">
     <div class="fakultas-header">
       <div class="header-text">
-        <img src="https://wbi.ac.id/uploads/images/zE5JKR0wWQ9u89A96vqu4uXEUi9leYEJubepLbbC.jpg" alt="Logo Telkom" style="height: 40px;">
         <h2>Wisuda Sarjana Terapan ke - 8 Politeknik WBI</h2>
         <a href="#" class="btn btn-profil">Baca selengkapnya</a>
     </div>
       <div class="header-img">
-        <img src="6605be75-43d9-4b02-af6c-5e9860d5aa78.png" alt="Gedung Telkom University">
+        <img src="https://wbi.ac.id/uploads/images/zE5JKR0wWQ9u89A96vqu4uXEUi9leYEJubepLbbC.jpg" alt="Buku Wisuda">
       </div>
     </div>
   </div>
