--- a/23november2024.html
+++ b/23november2024.html
@@ -252,7 +252,7 @@ section img:hover {
     <div class="fakultas-header">
       <div class="header-text">
         <h2>Wisuda Sarjana Terapan ke - 8 Politeknik WBI</h2>
-        <a href="#" class="btn btn-profil">Baca selengkapnya</a>
+        <a href="https://wbi.ac.id/buku-wisuda/buku-wisuda-23-november-2024/download/GtsbzVcljLnMT1dYrW0FsPgFIdckdoWCvuPKrutZ.pdf6865f69f0c5c2.pdf" class="btn btn-profil">Baca selengkapnya</a>
     </div>
       <div class="header-img">
         <img src="https://wbi.ac.id/uploads/images/zE5JKR0wWQ9u89A96vqu4uXEUi9leYEJubepLbbC.jpg" alt="Buku Wisuda">
