--- a/21juni2025.html
+++ b/21juni2025.html
@@ -249,12 +249,11 @@ section img:hover {
  </div>
 
  <div class="video-section">
-<iframe width="853" height="480" src="https://www.youtube.com/embed/CbB93XSYTF4" title="SIDANG SENAT TERBUKA POLITEKNIK WBI 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
-  <div class="container mt-5">
+<iframe width="853" height="480" src="https://www.youtube.com/embed/VFaZIovOcoU" title="SIDANG SENAT TERBUKA POLITEKNIK WBI 2025" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  <div class="container mt-5">
     <div class="wisuda-header">
       <div class="header-text">
         <h2>Wisuda Sarjana Terapan ke - 9 Politeknik WBI</h2>
-        <a href="#" class="btn btn-profil">Baca selengkapnya</a>
+        <a href="https://wbi.ac.id/buku-wisuda/buku-wisuda-21-juni-2025/download/YCXI7VDgsXHQHp8orUISNYhW6xBDH88C33cmkAOY.pdf6865f8bdd3c70.pdf" class="btn btn-profil">Baca selengkapnya</a>
     </div>
       <div class="header-img">
         <img src="https://wbi.ac.id/uploads/images/PMn8KnZyNETXrt0NTVa6oSd5ET05uMji6Vgbvif7.jpg" alt="Buku Wisuda">
