--- a/23november2024.html
+++ b/23november2024.html
@@ -261,6 +261,7 @@ section img:hover {
     </div>
   </div>
  </div>
+</div>
 
   <!-- Footer -->
 <footer class="footer-section bg-dark text-white pt-5 pb-3">
