--- a/23november2024.html
+++ b/23november2024.html
@@ -248,19 +248,18 @@ section img:hover {
 </div>
  </div>
 
- <div class="video-section">
-<iframe width="853" height="480" src="https://www.youtube.com/embed/VFaZIovOcoU" title="SIDANG SENAT TERBUKA POLITEKNIK WBI 2025" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  <div class="container mt-5">
-    <div class="wisuda-header">
-      <div class="header-text">
-        <h2>Wisuda Sarjana Terapan ke - 8 Politeknik WBI</h2>
-        <a href="https://wbi.ac.id/buku-wisuda/buku-wisuda-21-juni-2025/download/YCXI7VDgsXHQHp8orUISNYhW6xBDH88C33cmkAOY.pdf6865f8bdd3c70.pdf" class="btn btn-profil">Baca selengkapnya</a>
-    </div>
-      <div class="header-img">
-        <img src="https://wbi.ac.id/uploads/images/zE5JKR0wWQ9u89A96vqu4uXEUi9leYEJubepLbbC.jpg" alt="Buku Wisuda">
-      </div>
-    </div>
-  </div>
- </div>
+<div class="video-section">
+  <iframe width="853" height="480" src="https://www.youtube.com/embed/CbB93XSYTF4" title="SIDANG SENAT TERBUKA POLITEKNIK WBI 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><div class="wisuda-header">
+<div class="header-text">
+  <h2>Wisuda Sarjana Terapan ke - 8 Politeknik WBI</h2>
+  <a href="https://wbi.ac.id/buku-wisuda/buku-wisuda-23-november-2024/download/GtsbzVcljLnMT1dYrW0FsPgFIdckdoWCvuPKrutZ.pdf6865f69f0c5c2.pdf" class="btn btn-profil">Baca selengkapnya</a>
+</div>
+<div class="header-img">
+  <img src="https://wbi.ac.id/uploads/images/zE5JKR0wWQ9u89A96vqu4uXEUi9leYEJubepLbbC.jpg" alt="Buku Wisuda">
+</div>
+</div>
+</div>
+</div>
 </div>
 
   <!-- Footer -->
