--- a/23november2024.html
+++ b/23november2024.html
@@ -119,7 +119,7 @@ section img {
 section img:hover {
   transform: scale(1.1);
 }
-    .fakultas-header {
+    .wisuda-header {
       background: linear-gradient(to right, #0a74d0, #49a2f2);
       color: white;
       border-radius: 20px;
