--- a/pusatinisiatifwbi.html
+++ b/pusatinisiatifwbi.html
@@ -262,7 +262,7 @@ section img:hover {
 
   <div class="row">
     <div class="col-12">
-      <img src="https://wbi.ac.id/uploads/images/Politeknik-WBIwbic.jpg5f1513afa5687.jpg" alt="Open Library" class="section-img">
+      <img src="https://wbi.ac.id/uploads/images/Politeknik-WBIwbic.jpg5f1513afa5687.jpg" alt="Open Library" class="section-img" style="width: 350px; height: 250px;">
     </div>
   </div>
 
