--- a/salamdirektur.html
+++ b/salamdirektur.html
@@ -212,14 +212,12 @@ section img:hover {
   </div>
 </nav>
 
-<h5 class="bg-success text-white px-3 py-1 m-0">SALAM DARI DIREKTUR</h5>
+<h5 class="bg-success text-white px-3 py-3 m-0">SALAM DARI DIREKTUR</h5>
 <!-- Ganti bagian <img> dengan video -->
 <div class="col-md-5 mb-4 mb-md-0">
-  <div class="ratio ratio-16x9">
-    <iframe src="https://youtu.be/l7a0O7bu9Qg" 
-            title="Pendidikan di WBI" allowfullscreen></iframe>
-  </div>
+<iframe width="853" height="480" src="https://www.youtube.com/embed/l7a0O7bu9Qg" title="Profile Kampus Politeknik WBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  </div>
 </div>
+
 <h4 class="fw-bold text-success">Dr. Ir. Jenny Elisabeth, MS</h4>
     <p class="mt-4">
     Politeknik Wilmar Bisnis Indonesia (WBI) adalah perguruan tinggi yang didirikan oleh salah satu pebisnis sukses Indonesia kelahiran Pematang Siantar, Martua Sitorus. Niat mulianya berawal dari rasa prihatin beliau pada tingkat pengangguran yang relatif tinggi serta rendahnya jumlah entrepreneur (wirausaha) di Indonesia.  Fakta yang ada bahwa di Februari 2020 tercatat tingkat pengangguran terbuka di Indonesia sebanyak 6.88 juta orang dan dengan penambahan jumlah pengangguran lebih dari 60 ribu orang dalam setahun. Hal yang menambah keprihatinan beliau adalah di dalam jumlah pengangguran yang meningkat tersebut ikut bertambah angka pengangguran terbuka dari lulusan pendidikan tinggi. Oleh sebab itu beliau berkomitmen untuk menjadikan Politeknik WBI sebagai institusi pendidikan tinggi yang dapat membantu masyarakat Indonesia keluar dari masalah pengangguran tersebut dan menciptakan kesejahteraan masyarakat yang lebih luas.</p>
