--- a/sejarahwbi.html
+++ b/sejarahwbi.html
@@ -222,7 +222,7 @@ section img:hover {
       </div>
 
       <!-- Kolom Teks -->
-      <div class="col-md-7">
+      <div class="col-md-7 py-3">
         <div class="mb-3 d-flex align-items-center">
           <img src="https://student.wbi.ac.id/assets/image_web/logo-white-3.png" alt="Ikon" style="height: 40px;" class="me-2">
           <h4 class="bg-success text-white px-3 py-1 m-0">SEJARAH</h4>
