--- a/21juni2025.html
+++ b/21juni2025.html
@@ -256,7 +256,7 @@ section img:hover {
   <a href="https://wbi.ac.id/buku-wisuda/buku-wisuda-21-juni-2025/download/YCXI7VDgsXHQHp8orUISNYhW6xBDH88C33cmkAOY.pdf6865f8bdd3c70.pdf" class="btn btn-profil">Baca selengkapnya</a>
 </div>
 <div class="header-img">
-  <img src="https://wbi.ac.id/uploads/images/PMn8KnZyNETXrt0NTVa6oSd5ET05uMji6Vgbvif7.jpg" alt="Buku Wisuda">
+  <img src="https://wbi.ac.id/uploads/images/PMn8KnZyNETXrt0NTVa6oSd5ET05uMji6Vgbvif7.jpg" alt="Buku Wisuda" style="width: 250px; height: 200px;">
 </div>
 </div>
 </div>
