--- a/23november2024.html
+++ b/23november2024.html
@@ -255,7 +255,7 @@ section img:hover {
   <a href="https://wbi.ac.id/buku-wisuda/buku-wisuda-23-november-2024/download/GtsbzVcljLnMT1dYrW0FsPgFIdckdoWCvuPKrutZ.pdf6865f69f0c5c2.pdf" class="btn btn-profil">Baca selengkapnya</a>
 </div>
 <div class="header-img">
-  <img src="https://wbi.ac.id/uploads/images/zE5JKR0wWQ9u89A96vqu4uXEUi9leYEJubepLbbC.jpg" alt="Buku Wisuda">
+  <img src="https://wbi.ac.id/uploads/images/zE5JKR0wWQ9u89A96vqu4uXEUi9leYEJubepLbbC.jpg" alt="Buku Wisuda" style="width: 250px; height: 200px;">
 </div>
 </div>
 </div>
