--- a/ap.html
+++ b/ap.html
@@ -233,8 +233,7 @@
   </div>
 
   <div class="video-section">
-    <iframe width="560" height="315" src="https://youtu.be/tR-Lmg1s7hc" title="Profile Video Teknik Telekomunikasi Universitas Telkom" frameborder="0" allowfullscreen></iframe>
-  </div>
+  <iframe width="853" height="480" src="https://www.youtube.com/embed/tR-Lmg1s7hc" title="Program Studi Akuntansi Perpajakan Politeknik WBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  </div>
 
 <div class="container my-4">
 
