--- a/laboratoriumkomputer.html
+++ b/laboratoriumkomputer.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <style>
-   body {
+  body {
       font-family: 'Segoe UI', sans-serif;
     }
     .navbar-brand img {
@@ -119,7 +119,54 @@ section img {
 section img:hover {
   transform: scale(1.1);
 }
+    .section-header {
+      text-align: center;
+      margin-bottom: 10px;
+    }
 
+    .section-header h6 {
+      position: relative;
+      display: inline-block;
+      font-weight: bold;
+      color: #b30000;
+      margin-bottom: 5px;
+      text-transform: uppercase;
+      font-size: 14px;
+    }
+
+    .section-header h6::before,
+    .section-header h6::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      width: 40px;
+      height: 2px;
+      background-color: #b30000;
+    }
+
+    .section-header h6::before {
+      left: -50px;
+    }
+
+    .section-header h6::after {
+      right: -50px;
+    }
+
+    .section-header h2 {
+      color: #800000;
+      font-weight: bold;
+      margin-top: 5px;
+    }
+
+    .section-img {
+      width: 100%;
+      border-radius: 6px;
+    }
+
+    .section-desc {
+      margin-top: 15px;
+      text-align: justify;
+    }
 </style>
 </head>
 <body>
@@ -217,7 +264,7 @@ section img:hover {
 
   <div class="row">
     <div class="col-12">
-      <img src="https://wbi.ac.id/uploads/images/komputer.jpg5f24f215ad48e.jpg" alt="Open Library" class="section-img">
+      <img src="https://wbi.ac.id/uploads/images/komputer.jpg5f24f215ad48e.jpg" alt="Open Library" class="section-img" style="width: 350px; height: 250px;">
     </div>
   </div>
 
