--- a/perpustakaan.html
+++ b/perpustakaan.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <style>
-     body {
+  body {
       font-family: 'Segoe UI', sans-serif;
     }
     .navbar-brand img {
@@ -263,7 +263,7 @@ section img:hover {
 
   <div class="row">
     <div class="col-12">
-      <img src="https://wbi.ac.id/uploads/images/DPUNVggMi8hxiEa4FE3JVjrl5FsOXdWW11zmiUSO.jpeg" alt="Open Library" class="section-img">
+      <img src="https://wbi.ac.id/uploads/images/DPUNVggMi8hxiEa4FE3JVjrl5FsOXdWW11zmiUSO.jpeg" alt="Open Library" class="section-img" style="width: 350px; height: 250px;">
     </div>
   </div>
 
