--- a/septiansimatupang.html
+++ b/septiansimatupang.html
@@ -248,7 +248,7 @@ section img:hover {
 </nav>
 
 <div class="container py-4">
-  <div class="row">
+  <div class="row py-3">
     <!-- Foto dan identitas -->
     <div class="col-md-3">
       <div class="foto-profil text-center">
