--- a/trpl.html
+++ b/trpl.html
@@ -234,8 +234,7 @@
   </div>
 
   <div class="video-section">
-    <iframe width="560" height="315" src="https://youtu.be/RFFSWgZR57M" title="Profile Video Teknik Telekomunikasi Universitas Telkom" frameborder="0" allowfullscreen></iframe>
-  </div>
+  <iframe width="853" height="480" src="https://www.youtube.com/embed/RFFSWgZR57M" title="Program Studi Teknologi Rekayasa Perangkat Lunak Politeknik WBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  </div>
 
 <div class="container my-4">
 
