--- a/bilsonpandiangan.html
+++ b/bilsonpandiangan.html
@@ -245,7 +245,7 @@ section img:hover {
 </nav>
 
 <div class="container py-4">
-  <div class="row">
+  <div class="row py-3">
     <!-- Foto dan identitas -->
     <div class="col-md-3 py-3">
       <div class="foto-profil text-center">
