--- a/pusatinisiatifwbi.html
+++ b/pusatinisiatifwbi.html
@@ -262,7 +262,8 @@ section img:hover {
 
   <div class="row">
     <div class="col-12">
-      <img src="https://wbi.ac.id/uploads/images/Politeknik-WBIwbic.jpg5f1513afa5687.jpg" alt="Open Library" class="section-img" style="width: 350px; height: 250px;">
+      <img src="https://wbi.ac.id/uploads/images/Politeknik-WBIwbic.jpg5f1513afa5687.jpg" alt="Open Library" class="section-img" style="width: 450px; height: 350px;">
+      <img src="https://wbi.ac.id/uploads/images/Politeknik-WBI-wbic2.jpg5f15141db606c.jpg" alt="Open Library" class="section-img" style="width: 450px; height: 350px;">
     </div>
   </div>
 
