--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@ section a.text-primary:hover {
     <div class="carousel-item active">
       <img src="https://wbi.ac.id/uploads/images/gFtIxBWZb680mPxPd5IO5QY65fkM9EMwxFdB7lKr.jpg" class="d-block w-100" alt="Slide 1">
       <div class="carousel-caption d-none d-md-block text-start">
-        <h2 class="text-white">Selamat datang di Website</h2>
-        <h1 class="text-white fw-bold">Politeknik Wilmar Bisnis Indonesia</h1>
+        <h2 class="text-dark">Selamat datang di Website</h2>
+        <h1 class="text-dark fw-bold">Politeknik Wilmar Bisnis Indonesia</h1>
       </div>
     </div>
 
@@ -486,12 +486,7 @@ section a.text-primary:hover {
       <div class="col-md-6">
         <h4 class="mb-3 text-success">Video Profil Poiliteknik</h4>
         <div class="ratio ratio-16x9 rounded shadow">
-          <iframe
-            src="https://youtu.be/SZgIvaPg1mo"
-            title="Video Profil WBI"
-            allowfullscreen
-          ></iframe>
-        </div>
+      <iframe width="853" height="480" src="https://www.youtube.com/embed/SZgIvaPg1mo" title="Politeknik Wilmar Bisnis Indonesia -  We Build Indonesia" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        </div>
       </div>
 
 <!-- Testimoni -->
@@ -580,8 +575,8 @@ section a.text-primary:hover {
       <div class="col-md-4">
         <h6 class="fw-bold mb-3">Tautan Penting</h6>
         <ul class="list-unstyled small">
-          <li><a href="#" class="footer-link">Tentang WBI</a></li>
-          <li><a href="#" class="footer-link">Penerimaan Mahasiswa</a></li>
+          <li><a href="logowbi.html" class="footer-link">Tentang WBI</a></li>
+          <li><a href="pendaftaran.html" class="footer-link">Penerimaan Mahasiswa</a></li>
           <li><a href="#" class="footer-link">Kerjasama</a></li>
           <li><a href="#" class="footer-link">Hubungi Kami</a></li>
         </ul>
@@ -592,9 +587,9 @@ section a.text-primary:hover {
         <h6 class="fw-bold mb-3">Ikuti Kami</h6>
         <div class="d-flex gap-3">
           <a href="#" class="text-white fs-5"><i class="bi bi-facebook">Facebook</i></a>
-          <a href="#" class="text-white fs-5"><i class="bi bi-instagram">Instagram</i></a>
+          <a href="https://www.instagram.com/politeknikwbi/" class="text-white fs-5"><i class="bi bi-instagram">Instagram</i></a>
           <a href="#" class="text-white fs-5"><i class="bi bi-twitter-x">X/Twitter</i></a>
-          <a href="#" class="text-white fs-5"><i class="bi bi-youtube">YouTube</i></a>
+          <a href="https://www.youtube.com/@politeknikwbi5045" class="text-white fs-5"><i class="bi bi-youtube">YouTube</i></a>
         </div>
       </div>
     </div>
