--- a/trpl.html
+++ b/trpl.html
@@ -212,12 +212,21 @@
     </div>
   </div>
 
-<div class="col-md-2 py-3">Greeting From Head</div>
+<div class="container">
+<div class="row py-3">
+    <h4 class="section-heading" style="border-left: 5px solid teal;">SALAM DARI KEPALA PROGRAM STUDI</h4>
+<div class="col-12">
+</div>
+</div>
 
-  <div class="container">
+  <div class="container col-md-2">
     <div class="text-section">
       <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
     </div>
+    <div class="photo-section">
+      <img src="https://wbi.ac.id/uploads/images/Js2mwKzPiosvLpHaxsRJNHyDM7UxVYnFc0lcO8bP.jpg" alt="Foto Kaprodi">
+    </div>
+  </div>
     
     <div class="container">
     <div class="text-section">
@@ -227,11 +236,6 @@
     <p>1. Menyelenggarakan dan mengembangkan pendidikan tinggi vokasional dalam bidang teknologi rekayasa perangkat lunak;</p>
     <a href="#" class="btn btn-profil">Baca selengkapnya →</a>
     </div>
-
-    <div class="photo-section">
-      <img src="ffd2821e-6709-441a-8dfa-cf7549f8631c.png" alt="Foto Kaprodi">
-    </div>
-  </div>
 
   <div class="video-section">
   <iframe width="853" height="480" src="https://www.youtube.com/embed/RFFSWgZR57M" title="Program Studi Teknologi Rekayasa Perangkat Lunak Politeknik WBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  </div>
