--- a/visimisitujuan.html
+++ b/visimisitujuan.html
@@ -215,7 +215,7 @@ section img:hover {
   </div>
 </nav>
 
-<section class="py-5 text-white">
+<section class="py-5 bg-success text-white">
   <div class="container">
     <div class="row align-items-center">
       <!-- Kolom Kiri: Teks -->
