--- a/23november2024.html
+++ b/23november2024.html
@@ -242,14 +242,15 @@ section img:hover {
 </nav>
 
 <div class="container">
-<div class="row mb-4">
+<div class="row mb-4 py-5">
 <div class="col-12 text-center">
   <h2 class="section-title">WISUDA : 23 NOVEMBER 2024</h2>
 </div>
  </div>
 
-<div class="video-section">
-  <iframe width="853" height="480" src="https://www.youtube.com/embed/CbB93XSYTF4" title="SIDANG SENAT TERBUKA POLITEKNIK WBI 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><div class="wisuda-header">
+<div class="video-section justify-content-center">
+  <iframe width="853" height="480" src="https://www.youtube.com/embed/CbB93XSYTF4" title="SIDANG SENAT TERBUKA POLITEKNIK WBI 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <div class="wisuda-header">
 <div class="header-text">
   <h2>Wisuda Sarjana Terapan ke - 8 Politeknik WBI</h2>
   <a href="https://wbi.ac.id/buku-wisuda/buku-wisuda-23-november-2024/download/GtsbzVcljLnMT1dYrW0FsPgFIdckdoWCvuPKrutZ.pdf6865f69f0c5c2.pdf" class="btn btn-profil">Baca selengkapnya</a>
