--- a/21juni2025.html
+++ b/21juni2025.html
@@ -242,14 +242,15 @@ section img:hover {
 </nav>
 
 <div class="container">
-<div class="row mb-4">
+<div class="row mb-4 py-5">
 <div class="col-12 text-center">
   <h2 class="section-title">WISUDA : 21 JUNI 2025</h2>
 </div>
  </div>
 
-<div class="video-section">
-  <iframe width="853" height="480" src="https://www.youtube.com/embed/VFaZIovOcoU" title="SIDANG SENAT TERBUKA POLITEKNIK WBI 2025" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  <div class="container mt-5">
+<div class="video-section justify-content-center">
+  <iframe width="853" height="480" src="https://www.youtube.com/embed/VFaZIovOcoU" title="SIDANG SENAT TERBUKA POLITEKNIK WBI 2025" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+  <div class="container mt-5">
 <div class="wisuda-header">
 <div class="header-text">
   <h2>Wisuda Sarjana Terapan ke - 9 Politeknik WBI</h2>
