--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@ section a.text-primary:hover {
     <div class="carousel-item active">
       <img src="https://wbi.ac.id/uploads/images/gFtIxBWZb680mPxPd5IO5QY65fkM9EMwxFdB7lKr.jpg" class="d-block w-100" alt="Slide 1">
       <div class="carousel-caption d-none d-md-block text-start">
-        <h2 class="text-dark">Selamat datang di Website</h2>
-        <h1 class="text-dark fw-bold">Politeknik Wilmar Bisnis Indonesia</h1>
+        <h2 class="text-danger">Selamat datang di Website</h2>
+        <h1 class="text-danger fw-bold">Politeknik Wilmar Bisnis Indonesia</h1>
       </div>
     </div>
 
