--- a/ah.html
+++ b/ah.html
@@ -220,7 +220,7 @@
 </div>
 
  <div class="container py-4">
-  <div class="row py-5">
+  <div class="row py-1">
     <!-- Foto dan identitas -->
     <div class="col-md-3">
       <div class="foto-profil text-center">
@@ -230,7 +230,7 @@
 
     <!-- Profil dan publikasi -->
     <div class="col-md-9">
-    <h5 class="section-heading" style="border-left: 5px solid teal;">Amelira Haris Nasution, S.P., M.Si.</h5>
+    <h5 class="section-heading">Amelira Haris Nasution, S.P., M.Si.</h5>
       <p>
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
       </p>
