--- a/biayakuliah.html
+++ b/biayakuliah.html
@@ -207,7 +207,7 @@ section img:hover {
 </nav>
 
  <div class="container">
-<div class="row p-3">
+<div class="row p-3 py-4">
 <div class="col-12">
     <h4 class="text-center mb-4">TEKNOLOGI REKAYASA PERANGKAT LUNAK</h4>
 <table class="table table-bordered table-teal">
