--- a/sejarahwbi.html
+++ b/sejarahwbi.html
@@ -222,11 +222,18 @@ section img:hover {
       </div>
 
       <!-- Kolom Teks -->
-      <div class="col-md-7 py-3">
+      <div class="col-md-7 py-5">
         <div class="mb-3 d-flex align-items-center">
           <img src="https://student.wbi.ac.id/assets/image_web/logo-white-3.png" alt="Ikon" style="height: 40px;" class="me-2">
-          <h4 class="bg-success text-white px-3 py-1 m-0">SEJARAH</h4>
+        
+        <div class="container">
+        <div class="row py-5">
+            <h4 class="section-heading" style="border-left: 5px solid teal;">SEJARAH WBI</h4>
+        <div class="col-12">
         </div>
+        </div>
+        </div>
+
         <h4 class="fw-bold text-success">
         Berawal dari Keprihatinan Berwujud Dalam Pendidikan Pengembangan Kewirausahaan</h4>
         <p class="mt-4">
