--- a/salamdirektur.html
+++ b/salamdirektur.html
@@ -212,7 +212,14 @@ section img:hover {
   </div>
 </nav>
 
-<h5 class="bg-success text-white px-3 py-5 m-0">SALAM DARI DIREKTUR</h5>
+        <div class="container">
+        <div class="row py-5">
+            <h4 class="section-heading" style="border-left: 5px solid teal;">SALAM DARI DIREKTUR</h4>
+        <div class="col-12">
+        </div>
+        </div>
+        </div>
+
 <!-- Ganti bagian <img> dengan video -->
 <div class="col-md-5 mb-4 mb-md-0 justify-content-center">
 <iframe width="853" height="480" src="https://www.youtube.com/embed/l7a0O7bu9Qg" title="Profile Kampus Politeknik WBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
