--- a/salamdirektur.html
+++ b/salamdirektur.html
@@ -220,8 +220,7 @@ section img:hover {
         </div>
         </div>
 
-<!-- Ganti bagian <img> dengan video -->
-<div class="col-md-5 mb-4 mb-md-0 justify-content-center">
+<div class="col-md-5 mb-4 mb-md-0">
 <iframe width="853" height="480" src="https://www.youtube.com/embed/l7a0O7bu9Qg" title="Profile Kampus Politeknik WBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 </div>
 
