--- a/sejarahwbi.html
+++ b/sejarahwbi.html
@@ -225,7 +225,7 @@ section img:hover {
       <div class="col-md-7 py-5">
         <div class="mb-3 d-flex align-items-center">
           <img src="https://student.wbi.ac.id/assets/image_web/logo-white-3.png" alt="Ikon" style="height: 40px;" class="me-2">
-          <h4 class="bg-success text-white px-3 py-5 m-0">SEJARAH WBI</h4>
+          <h4 class="bg-success text-white px-3 py-5 m-0">SEJARAH</h4>
         </div>
         <h4 class="fw-bold text-success">
         Berawal dari Keprihatinan Berwujud Dalam Pendidikan Pengembangan Kewirausahaan</h4>
